<resources>
    <string name="app_name">SmartyPaws</string>
    <string name="new_flashcard_or_quiz">new flashcard or quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">171206094154-d5226dc5qjepo49u62up336l412qi9po.apps.googleusercontent.com</string>

    <string name="set_your_quiz_parameters">Set Your Quiz \nParameter</string>
    <string name="number_of_questions">Number of \nQuestions</string>
    <string name="total_questions">Total\nQuestions</string>
    <string name="total_questions_format">Total Questions: %d</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="return_button">Return</string>
    <string name="error_enter_number">Please enter number of questions</string>
    <string name="error_positive_number">Number must be greater than 0</string>
    <string name="quiz_title">Quiz: MAD Lect 3</string>
    <string name="previous_question">Previous Question</string>
    <string name="next_question">Next Question</string>
    <string name="score_summary">Score\nSummary</string>
    <string name="correct_answers">Correct\nAnswers</string>
    <string name="score">Score</string>
    <string name="retake_quiz">Retake Quiz</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
</resources>